Update src/ext/java/org/opentripplanner/ext/vectortiles/layers/stops/DigitransitStopPropertyMapper.java
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>